--- a/styles/style1.css
+++ b/styles/style1.css
@@ -15,3 +15,15 @@ body {
 .footer-contents {
     margin-top: 10px;
 }
+
+.crop {
+    width: 100%;
+    height: 450px;
+    overflow: hidden;
+}
+
+.crop img {
+    width: 100%;
+    height: 550px;
+}
+
