--- a/styles/style1.css
+++ b/styles/style1.css
@@ -41,3 +41,24 @@ body {
 .noneDecore {
     text-decoration: none;
 }
+
+
+.rounded {
+    border-radius: 1rem
+}
+
+.nav-pills .nav-link {
+    color: #555
+}
+
+.nav-pills .nav-link.active {
+    color: white
+}
+
+input[type="radio"] {
+    margin-right: 5px
+}
+
+.bold {
+    font-weight: bold
+}
